--- a/src/ca/sheridancollege/project/FXMLDocumentGameBoard.fxml
+++ b/src/ca/sheridancollege/project/FXMLDocumentGameBoard.fxml
@@ -7,8 +7,49 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.sheridancollege.project.FXMLDocumentGameBoardController">
-    <stylesheets>
-        <URL value="@fxmldocumentgameboard.css"/>
-    </stylesheets>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.sheridancollege.project.FXMLDocumentGameBoardController">
+   <top>
+      <AnchorPane prefHeight="71.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="label_machine2" layoutX="208.0" layoutY="27.0" prefHeight="17.0" prefWidth="149.0" text="Label" />
+         </children>
+      </AnchorPane>
+   </top>
+   <left>
+      <AnchorPane prefHeight="142.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="label_machine3" layoutX="72.0" layoutY="81.0" text="Label" />
+         </children>
+      </AnchorPane>
+   </left>
+   <bottom>
+      <GridPane fx:id="gridpane_player" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+   </bottom>
+   <center>
+      <AnchorPane prefHeight="123.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="label_deadwood" layoutX="86.0" layoutY="81.0" text="Label" />
+            <Button fx:id="button_draw" layoutX="74.0" layoutY="140.0" mnemonicParsing="false" onAction="#draw" text="Draw" />
+         </children>
+      </AnchorPane>
+   </center>
+   <right>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="label_machine1" layoutX="86.0" layoutY="81.0" text="Label" />
+         </children>
+      </AnchorPane>
+   </right>
+</BorderPane>
